fix: scrollbar css

--- a/frontend/src/assets/css/main.scss
+++ b/frontend/src/assets/css/main.scss
@@ -64,29 +64,51 @@ button {
 }
 
 /* ===== Scrollbar CSS ===== */
-/* Firefox */
-* {
-  scrollbar-width: auto;
-  scrollbar-color: var(--color-primary) #fff0;
+/* Modern browsers with `scrollbar-*` support */
+@supports (scrollbar-width: auto) {
+  * {
+    scrollbar-color: var(--color-primary) #fff0;
+    scrollbar-width: thin;
+  }
 }
 
-/* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: calc(var(--unit) * 2);
-}
+/* Legacy browsers with `::-webkit-scrollbar-*` support */
+@supports selector(::-webkit-scrollbar) {
+  *::-webkit-scrollbar {
+    width: calc(var(--unit) * 1.25);
+    height: calc(var(--unit) * 1.25);
+  }
 
-*::-webkit-scrollbar-track {
-  background: var(--color-background);
-}
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--color-primary);
+    border: 2px solid var(--color-background);
+  }
 
-*::-webkit-scrollbar-thumb {
-  background-color: var(--color-primary);
-  border-radius: var(--radius-medium);
-  border: 4px solid var(--color-background);
-}
-*::-webkit-scrollbar-thumb:hover {
-  background: var(--color-warning);
-}
-*::-webkit-scrollbar-thumb:active {
-  background: var(--color-error);
+  ::-webkit-scrollbar-button:single-button {
+    display: block;
+    background-size: 4px;
+    height: calc(var(--unit) * 1.25);
+    width: calc(var(--unit) * 1.25);
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  /* Up */
+  ::-webkit-scrollbar-button:single-button:vertical:decrement {
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(0, 163, 255)'><polygon points='50,00 0,50 100,50'/></svg>");
+  }
+
+  /* Down */
+  ::-webkit-scrollbar-button:single-button:vertical:increment {
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(0, 163, 255)'><polygon points='0,0 100,0 50,50'/></svg>");
+  }
+  /* Left */
+  ::-webkit-scrollbar-button:single-button:horizontal:decrement {
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(0, 163, 255)'><polygon points='0,50 50,100 50,0'/></svg>");
+  }
+
+  /* Right */
+  ::-webkit-scrollbar-button:single-button:horizontal:increment {
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(0, 163, 255)'><polygon points='0,0 0,100 50,50'/></svg>");
+  }
 }
